--- a/Web Development/HTML - Personal Site/css/styles.css
+++ b/Web Development/HTML - Personal Site/css/styles.css
@@ -1,11 +1,21 @@
 body {
   margin: 0;
   text-align: center;
+  font-family: 'Merriweather', serif;
 }
 
 h1 {
   margin-top: 0;
   margin: 0 auto;
+  font-family: 'Sacramento', cursive;
+}
+
+h2 {
+  font-family: 'Montserat', sans-serif;
+}
+
+h3 {
+  font-family: 'Sacramento', sans-serif;
 }
 
 .top-container {
