--- a/Web Development/HTML - Personal Site/css/styles.css
+++ b/Web Development/HTML - Personal Site/css/styles.css
@@ -5,14 +5,14 @@ body {
 }
 
 h1 {
-  margin-top: 0;
-  margin: 0 auto;
+  margin: 50px auto 0 auto;
   font-family: 'Sacramento', cursive;
-  font-size: 90px;
+  font-size: 5.625rem;
 }
 
 h2 {
   font-family: 'Montserat', sans-serif;
+  font-size: 2.5rem;
 }
 
 h3 {
